--- a/2_Basics_PythonProgramming_Takehome.ipynb
+++ b/2_Basics_PythonProgramming_Takehome.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -138,28 +137,30 @@
       "cell_type": "code",
       "source": [
         "# Calculate the effect of starting principal (more 'P')\n",
+        "# Formula variables\n",
         "r = 5 / 100\n",
         "n = 1\n",
         "t = 5\n",
-        "pArray = [10,50,100,500,1000]\n",
+        "p_array = [10,50,100,500,1000] # Array for principal\n",
         "\n",
-        "def pEffect(principals):\n",
+        "def p_effect(principals):\n",
         "  for p in principals:\n",
-        "    totalAmount = p * ((1 + (r / n)) ** (n * t))\n",
+        "    total_amount = p * ((1 + (r / n)) ** (n * t))\n",
+        "    # Display the result\n",
         "    print(f\"Principal: ${p}\\n\")\n",
-        "    print(f\"Total amount: ${totalAmount}\\n\")\n",
-        "    print(f\"Total interest: ${totalAmount - p}\\n\\n\")\n",
+        "    print(f\"Total amount: ${total_amount}\\n\")\n",
+        "    print(f\"Total interest: ${total_amount - p}\\n\\n\")\n",
         "\n",
-        "pEffect(pArray)"
+        "p_effect(p_array)"
       ],
       "metadata": {
         "id": "MICZ2cnDbrZg",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2bdc4137-111e-444e-bc9e-7b3ea974deae"
+        "outputId": "11a45733-c280-40c4-bcff-aaec0be4843b"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -239,27 +240,29 @@
       "cell_type": "code",
       "source": [
         "# Calculate the effect of starting early (more 't')\n",
+        "# Formula varaibles\n",
         "r = 5 / 100\n",
         "n = 1\n",
-        "tArray = [2,5,10,20,30]\n",
+        "t_array = [2,5,10,20,30] # Array for time in year\n",
         "p = 100\n",
-        "def tEffect(years):\n",
+        "def t_effect(years):\n",
         "  for t in years:\n",
-        "    totalAmount = p * ((1 + (r / n)) ** (n * t))\n",
+        "    total_amount = p * ((1 + (r / n)) ** (n * t))\n",
+        "    # Display the result\n",
         "    print(f\"Investing years: {t}yrs\\n\")\n",
-        "    print(f\"Total amount: ${totalAmount}\\n\")\n",
-        "    print(f\"Total interest: ${totalAmount - p}\\n\\n\")\n",
+        "    print(f\"Total amount: ${total_amount}\\n\")\n",
+        "    print(f\"Total interest: ${total_amount - p}\\n\\n\")\n",
         "\n",
-        "tEffect(tArray)"
+        "t_effect(t_array)"
       ],
       "metadata": {
         "id": "a5jHCG7NdcBf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3202e52a-d33f-49b5-ac70-84d21368a6a8"
+        "outputId": "fbde2ae0-9abd-4946-9686-a1d111c4aaa6"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -339,27 +342,29 @@
       "cell_type": "code",
       "source": [
         "# Calculate the effect of better rate of return (more 'r')\n",
-        "rArray = [2 / 100 , 5 / 100 , 8 / 100 , 10 / 100]\n",
+        "# Formula variables\n",
+        "r_array = [2 / 100 , 5 / 100 , 8 / 100 , 10 / 100] # Array for interest rate\n",
         "n = 1\n",
         "t = 5\n",
         "p = 100\n",
-        "def rEffect(rate):\n",
+        "def r_effect(rate):\n",
         "  for r in rate:\n",
-        "    totalAmount = p * ((1 + (r / n)) ** (n * t))\n",
+        "    total_amount = p * ((1 + (r / n)) ** (n * t))\n",
+        "    # Display the result\n",
         "    print(f\"Rate: {r * 100}%\\n\")\n",
-        "    print(f\"Total amount: ${totalAmount}\\n\")\n",
-        "    print(f\"Total interest: ${totalAmount - p}\\n\\n\")\n",
+        "    print(f\"Total amount: ${total_amount}\\n\")\n",
+        "    print(f\"Total interest: ${total_amount - p}\\n\\n\")\n",
         "\n",
-        "rEffect(rArray)\n"
+        "r_effect(r_array)\n"
       ],
       "metadata": {
         "id": "pbcjQ24Kew56",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c57b06be-adfa-4f38-c8ab-c35a69a476db"
+        "outputId": "34700371-98af-4125-c4d2-ae85a27707e9"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -430,24 +435,29 @@
       "cell_type": "code",
       "source": [
         "# Write a new python function that will also take a fixed recurring deposit 'rd' every month to calculate compounding interest\n",
-        "\n",
+        "# Formula variables\n",
         "r = 5 / 100\n",
         "n = 1\n",
         "t = 5\n",
         "p = 100\n",
-        "rd = 5\n",
-        "def investment():\n",
-        "  totalInterest = 0\n",
+        "recurring_deposit = 5\n",
+        "def investment(rd):\n",
+        "  # Evaluate total amount for first principal\n",
+        "  total_amount = p * ((1 + (r / n)) ** (n * t))\n",
+        "  # Find total principal by adding recurring deposit\n",
         "  totalP = p + ((t * 12) * rd)\n",
-        "  for i in range(t * 12):\n",
-        "    totalInterest += ((p + (rd * i)) * ((1 + (r / n)) ** (n * t))) - (p + (rd * i))\n",
+        "  # Increase total amount by investing every month\n",
+        "  for m in range(1,t * 12):\n",
+        "    remaining_years = ((t * 12) - m) / 12\n",
+        "    total_amount += p * ((1 + (r / n)) ** (n * t))\n",
+        "  # Display the result\n",
         "  print(f\"Principal: ${p}\\n\")\n",
         "  print(f\"Recurring deposit: ${rd}\\n\")\n",
         "  print(f\"Total principal: ${totalP}\\n\")\n",
-        "  print(f\"Total amount: ${totalP + totalInterest}\\n\")\n",
-        "  print(f\"Total interest: ${totalInterest}\\n\\n\")\n",
+        "  print(f\"Total amount: ${total_amount}\\n\")\n",
+        "  print(f\"Total interest: ${}\\n\\n\")\n",
         "\n",
-        "investment()\n"
+        "investment(recurring_deposit)\n"
       ],
       "metadata": {
         "id": "PXVG53KdffHD",
@@ -503,6 +513,7 @@
         "def investment():\n",
         "  totalP = p + ((t * 12) * rd)\n",
         "  totalAmount = totalP * ((1 + (r / n)) ** (n * t))\n",
+        "  # Display the result\n",
         "  print(f\"Principal: ${p}\\n\")\n",
         "  print(f\"Recurring deposit: ${rd}\\n\")\n",
         "  print(f\"Total principal: ${totalP}\\n\")\n",
