--- a/2_Basics_PythonProgramming_Takehome.ipynb
+++ b/2_Basics_PythonProgramming_Takehome.ipynb
@@ -160,7 +160,7 @@
         },
         "outputId": "11a45733-c280-40c4-bcff-aaec0be4843b"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +262,7 @@
         },
         "outputId": "fbde2ae0-9abd-4946-9686-a1d111c4aaa6"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -364,7 +364,7 @@
         },
         "outputId": "34700371-98af-4125-c4d2-ae85a27707e9"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -445,17 +445,17 @@
         "  # Evaluate total amount for first principal\n",
         "  total_amount = p * ((1 + (r / n)) ** (n * t))\n",
         "  # Find total principal by adding recurring deposit\n",
-        "  totalP = p + ((t * 12) * rd)\n",
+        "  total_principal = p + ((t * 12) * rd)\n",
         "  # Increase total amount by investing every month\n",
         "  for m in range(1,t * 12):\n",
         "    remaining_years = ((t * 12) - m) / 12\n",
-        "    total_amount += p * ((1 + (r / n)) ** (n * t))\n",
+        "    total_amount += rd * ((1 + (r / n)) ** (n * remaining_years))\n",
         "  # Display the result\n",
         "  print(f\"Principal: ${p}\\n\")\n",
         "  print(f\"Recurring deposit: ${rd}\\n\")\n",
-        "  print(f\"Total principal: ${totalP}\\n\")\n",
+        "  print(f\"Total principal: ${total_principal}\\n\")\n",
         "  print(f\"Total amount: ${total_amount}\\n\")\n",
-        "  print(f\"Total interest: ${}\\n\\n\")\n",
+        "  print(f\"Total interest: ${total_amount - total_principal}\\n\\n\")\n",
         "\n",
         "investment(recurring_deposit)\n"
       ],
@@ -464,9 +464,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "19dfae8d-dffb-4162-8f3a-9ea1a3294984"
+        "outputId": "06010e5b-b989-4b94-eb7d-7b07a67577f8"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -478,9 +478,9 @@
             "\n",
             "Total principal: $400\n",
             "\n",
-            "Total amount: $4502.781203125005\n",
+            "Total amount: $461.6968458279527\n",
             "\n",
-            "Total interest: $4102.781203125005\n",
+            "Total interest: $61.6968458279527\n",
             "\n",
             "\n"
           ]
@@ -503,30 +503,87 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write code to calculate the final_amount (A) for recurring deposits into monthly compounding investment\n",
+        "# Formula variables\n",
+        "r = 5 / 100  # Annual interest rate\n",
+        "n = 12       # Monthly compounding\n",
+        "t = 5        # Investment period in years\n",
+        "p = 100      # Initial principal\n",
+        "rd_array = [0, 1, 5, 10, 50, 100]  # Recurring deposits\n",
         "\n",
-        "r = 5 / 100\n",
-        "n = 12\n",
-        "t = 5\n",
-        "p = 100\n",
-        "rd = 5\n",
-        "def investment():\n",
-        "  totalP = p + ((t * 12) * rd)\n",
-        "  totalAmount = totalP * ((1 + (r / n)) ** (n * t))\n",
-        "  # Display the result\n",
-        "  print(f\"Principal: ${p}\\n\")\n",
-        "  print(f\"Recurring deposit: ${rd}\\n\")\n",
-        "  print(f\"Total principal: ${totalP}\\n\")\n",
-        "  print(f\"Total amount: ${totalAmount}\\n\")\n",
-        "  print(f\"Total interest: ${totalAmount - totalP}\\n\\n\")\n",
+        "def investment(recurring_deposit):\n",
+        "    for rd in recurring_deposit:\n",
+        "        # Reset total amount for each rd\n",
+        "        total_amount = p * ((1 + (r / n)) ** (n * t))\n",
         "\n",
-        "investment()\n"
+        "        # Find total principal (initial + all recurring deposits)\n",
+        "        total_principal = p + (rd * 12 * t)\n",
+        "\n",
+        "        # Add recurring deposits' compound growth\n",
+        "        for m in range(1, t * 12 + 1):\n",
+        "            remaining_years = (t * 12 - m) / 12\n",
+        "            total_amount += rd * ((1 + (r / n)) ** (n * remaining_years))\n",
+        "\n",
+        "        # Display results for each `rd`\n",
+        "        print(f\"Principal: ${p}\")\n",
+        "        print(f\"Recurring Deposit: ${rd}\")\n",
+        "        print(f\"Total principal: ${total_principal}\")\n",
+        "        print(f\"Total amount: ${total_amount:.2f}\")\n",
+        "        print(f\"Total interest: ${total_amount - total_principal:.2f}\\n\")\n",
+        "\n",
+        "investment(rd_array)\n"
       ],
       "metadata": {
-        "id": "gz8NLxgzhHlU"
+        "id": "gz8NLxgzhHlU",
+        "outputId": "5a154791-5f91-40f7-8209-ecf9ccbe7c99",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Principal: $100\n",
+            "Recurring Deposit: $0\n",
+            "Total principal: $100\n",
+            "Total amount: 5 Years: $128.34\n",
+            "Total interest: $28.34\n",
+            "\n",
+            "Principal: $100\n",
+            "Recurring Deposit: $1\n",
+            "Total principal: $160\n",
+            "Total amount: 5 Years: $196.34\n",
+            "Total interest: $36.34\n",
+            "\n",
+            "Principal: $100\n",
+            "Recurring Deposit: $5\n",
+            "Total principal: $400\n",
+            "Total amount: 5 Years: $468.37\n",
+            "Total interest: $68.37\n",
+            "\n",
+            "Principal: $100\n",
+            "Recurring Deposit: $10\n",
+            "Total principal: $700\n",
+            "Total amount: 5 Years: $808.40\n",
+            "Total interest: $108.40\n",
+            "\n",
+            "Principal: $100\n",
+            "Recurring Deposit: $50\n",
+            "Total principal: $3100\n",
+            "Total amount: 5 Years: $3528.64\n",
+            "Total interest: $428.64\n",
+            "\n",
+            "Principal: $100\n",
+            "Recurring Deposit: $100\n",
+            "Total principal: $6100\n",
+            "Total amount: 5 Years: $6928.94\n",
+            "Total interest: $828.94\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -536,6 +593,17 @@
       "metadata": {
         "id": "HzaDkeEmhRTd"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#with more recurring investment we gain more interest"
+      ],
+      "metadata": {
+        "id": "upXbuPiiFcLW"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -551,26 +619,35 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Solving math problems and bank systems such as transactions and deposits."
+      ],
+      "metadata": {
+        "id": "1ONhGJlCGB0y"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Final Retrospection:\n",
         "### What challenges did you face while programming with Python?\n",
         "\n",
-        "\n",
+        "It was a good example, and I only had challenges with the last two questions about adding a recurring investment. I didn’t know what the question designer wanted me to do, but I wrote something that I hope is correct.\n",
         "\n",
         "### How did you overcome those challenges?\n",
         "\n",
-        "\n",
+        "For the last two questions i ask chatgpt just for understanding the question not writing the code.\n",
         "\n",
         "### Mention other resources you used to solve this take-home assignment\n",
-        "\n",
+        "I didn't use any resources.\n",
         "\n",
         "\n",
         "### Did you use any tools (like ChatGPT) to solve the issues? What are the challenges and opportunities?\n",
-        "\n",
+        "As I said i use chatgpt for understanding the two last questions.\n",
         "\n",
         "\n",
         "### After this exercise, are you feeling excited to learn more?\n",
         "\n",
-        "\n",
+        "Yeah, i like to learn more about python and machine learning.\n",
         "\n",
         "\n",
         "NOTE: Save the file with your code and text answers before committing it to your new GitHub public repository. Send a link to your file on Github to the TA."
